ES|QL|DS: skip the LinkedHashMap+Map.copyOf two-step in FFW schemaMap build (N37)
Mirrors the N40 fix on FileSplit: pre-size a HashMap and wrap with
Collections.unmodifiableMap instead of allocating a separate LinkedHashMap
and copying it via Map.copyOf. One allocation instead of two; iteration
order was never read by consumers, so dropping LinkedHashMap is a no-op
on behavior.